--- a/ProyectoProgram/Views/Shared/_testLayout.cshtml
+++ b/ProyectoProgram/Views/Shared/_testLayout.cshtml
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-    @Scripts.Render("~/bundles/jquer")
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
-    @Scripts.Render("~/bundles/jqueryva")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/Bootstrap")
     @RenderSection("scripts", required: false)
     @RenderBody()
