--- a/ProyectoProgram/Views/Inicio/Inicio.cshtml
+++ b/ProyectoProgram/Views/Inicio/Inicio.cshtml
@@ -4,7 +4,216 @@
     Layout = "~/Views/Shared/_BarraNavegacion.cshtml";
 }
 
-<h2>HOLA COMO ESTAS LOREM</h2>
+<div style="display: none;">
+    <form id="usuario">
+        <div class="form-group">
+            <label>Usuario: </label>
+            <input type="text" id="usuario" required class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label>Nombre Completo: </label>
+            <input type="text" id="nombrecompleto" required class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label>Usuario: </label>
+            <input type="password"id="contraseña" required class="form-control"/>
+        </div>
+        <div class="form-group">
+            <label>Rol de Usuario</label>
+            <select id="roles" class="form-control"></select>
+        </div>
+        <div class="form-group">
+            <label>Estado de Usuario: </label>
+            <select id="estado" class="form-control">
+                <option value="1">Activo</option>
+                <option value="2">Inactivo</option>
+            </select>
+        </div>
+    </form>
+</div>
+
+<div class="container">
+    <button class="btn btn-success" onclick="Preparar()"><span class="glyphicon glyphicon-plus-sign"></span> Usuario</button>
+    <table class="table table-responsive table-striped table-hover">
+        <thead>
+            <tr>
+                <th>USUARIO</th>
+                <th>NOMBRE</th>
+                <th>ROL</th>
+                <th>ESTADO</th>
+                <th>ACCIONES</th>
+            </tr>
+        </thead>
+        <tbody id="registros">
+        </tbody>
+    </table>
+</div>
+
+<script>
+    $(document).on("ready",function(){
+        llenarSelectRoles();
+        getUsuarios();
+    })
+
+    function getUsuarios(){
+        var table = $("#registros");
+        var f = "";
+        $.ajax({
+            url: "@Url.Action("GetUsuarios", "Inicio")",
+            type: "post",
+        dataType: "json",
+        beforeSend: function () {
+
+        },
+        success: function (data) {
+            table.empty();
+            $.each(data, function (k, v) {
+                if (data) {
+                    f += "<tr>";
+                    f += "<td>"+v.NOMBRE+"</td>";
+                    f += "<td>"+v.NOMBRE_COMPLETO+"</td>";
+                    f += "<td>" + v.ID_ROL + "</td>";
+                    f += "<td>" + v.ESTADO + "</td>";
+                    f += "<td>";
+                    f += "<i class='glyphicon glyphicon-pencil' style='cursor:pointer' onclick='Preparar(" + v.ID_USUARIO + ")'></i>";
+                    f += "&nbsp;"
+                    f += "<i class='glyphicon glyphicon-remove' style='cursor:pointer' onclick='AbrirELiminar(" + v.ID_USUARIO + ")'></i>";
+                    f += "</td>";
+                    f += "</tr>";
+                }
+            });
+            table.append(f);
+        },
+        error: function () {
+            dialogo("Error", "Error en la función @Url.Action("GetUsuarios", "inicio")");
+        }
+    });
+    }
+
+    function Preparar(ID) {
+        $("#usuario")[0].reset();
+        var ID = ID || 0;
+        $("#ID").val(ID);
+        if (ID != 0) {
+            $.ajax({
+                url: "@Url.Action("GetUsuario", "Inicio")",
+                type: "post",
+            dataType: "json",
+            data: { id: ID },
+            beforeSend: function () {
+                dialogo("Notificación", "Espere...");
+            },
+            success: function (data) {
+                if (data) {
+                    $("#usuario").val(data.NOMBRE);
+                    $("#nombrecompleto").val(data.NOMBRE_COMPLETO);
+                    jQuery("#dialogo").dialog("close");
+                    Abrir(ID);
+                }
+            },
+            error: function () {
+                dialogo("Error", "Error en la función @Url.Action("GetUsuario", "Principal")");
+            }
+        });
+    } else {
+            Abrir(ID);
+    }
+    }
+
+    function Abrir(ID) {
+        var accion = ID == 0 ? "Nuevo" : "Editar";
+        $("#usuario").dialog({
+            autoOpen: true,
+            width: 650,
+            title: accion,
+            modal: true,
+            resizable: false,
+            buttons: {
+                "Guardar": function () {
+                    Guardar();
+                },
+                "Cancelar": function () {
+                    $("#usuario").dialog("close");
+                }
+            },
+            open: function () { },
+            close: function () { }
+        });
+    }
 
 
+    function llenarSelectRoles(){
+        var selectRoles = $("#roles");
+        var e = "";
+        $.ajax({
+            url : "@Url.Action("getRoles", "Inicio")",
+            type : "post",
+            dataType : "json",
+            beforeSend : function (){
 
+            },
+            success : function (data){
+                selectRoles.empty();
+                $.each(data,function(k,v){
+                    if(data){
+                        e += "<option value='"+v.ID_ROL+"'>";
+                        e += v.ROL;
+                        e += "</option>";
+                    }
+                });
+                selectRoles.append(e);
+            },
+            erorr: function (x, y, z) {
+                dialogo(x.responseText);
+            }
+        });
+    }
+
+    function AbrirELiminar(ID) {
+        $("#IDEliminar").val(ID);
+        $("#CuadroELiminar").dialog({
+            autoOpen: true,
+            width: 650,
+            title: "Eliminar Registro",
+            "position": ['middle', 100],
+            modal: true,
+            resizable: false,
+            buttons: {
+                "Eliminar": function () {
+                    Eliminar($("#IDEliminar").val());
+                },
+                "Cancelar": function () {
+                    $("#CuadroELiminar").dialog("close");
+                }
+            },
+            open: function () { },
+            close: function () { }
+        });
+    };
+
+    function Eliminar(id) {
+        $.ajax({
+            url: "@Url.Action("Eliminar", "Principal")",
+            type: "post",
+        dataType: "json",
+        data: JSON.stringify({
+            ID: id
+        }),
+        contentType: 'application/json; charset=utf-8',
+        beforeSend: function () {
+            dialogo("Notificación", "Espere...");
+        },
+        success: function (data) {
+            if (data.type) {
+                GetUsuarios();
+            }
+            setTimeout(function () {
+                dialogo("Notificación", data.message);
+            }, 1000);
+        },
+        error: function () {
+            dialogo("Error", "Error en la función @Url.Action("Guardar", "Principal")");
+        }
+    });
+    }
+</script>
