--- a/ProyectoProgram/Views/CuentaNiveles/Index.cshtml
+++ b/ProyectoProgram/Views/CuentaNiveles/Index.cshtml
@@ -5,30 +5,32 @@
     Layout = "~/Views/Shared/_BarraNavegacion.cshtml";
 }
 
-<h2>Index</h2>
+<!--<h2>Index</h2>-->
+<div class="container">
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.NUMERONIVEL)
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NUMERONIVEL)
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NUMERONIVEL)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.IDNIVEL }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.IDNIVEL }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.IDNIVEL })
+                </td>
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.NUMERONIVEL)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDNIVEL }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDNIVEL }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDNIVEL })
-        </td>
-    </tr>
-}
-
-</table>
+    </table>
+</div>
